# mdat-rs

./: .gitignore  Cargo.toml  README.md
.scratch/mdat-view/: spec.md  tickets.md
crates/mdat/: Cargo.toml
crates/mdat-input/: Cargo.toml
crates/mdat-input/src/: czi.rs  error.rs  lib.rs  nd2.rs  registry.rs  session.rs  tiff_series.rs  types.rs
crates/mdat-view/: Cargo.toml  build.rs
crates/mdat-view/src/: assets.rs  lib.rs  main.rs  placeholder.html.in
crates/mdat-view/tests/: api.rs
crates/mdat-view/web/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
crates/mdat-view/web/src/: App.tsx  Viewer.tsx  api.ts  index.css  main.tsx  types.ts
crates/mdat-view/web/src/components/: ChannelPanel.tsx  ErrorOverlay.tsx  MetadataPanel.tsx  PixelInspector.tsx
crates/mdat-view/web/src/viewer/: colors.ts  composite.ts
crates/mdat-view/web/tests/: fixtures.mjs  smoke.mjs
crates/mdat-wasm/: Cargo.toml
crates/mdat-wasm/src/: lib.rs
crates/mdat/src/: convert.rs  error.rs  io.rs  lib.rs  main.rs  metadata.rs  selection.rs  slices.rs
crates/mdat/src/input/: czi.rs  mod.rs  nd2.rs  registry.rs  session.rs  types.rs
crates/mdat/src/output/: acdc.rs  mdat.rs  mod.rs
scripts/: build-wasm.sh
