[package]
name = "mdat-input"
version = "0.1.0"
edition = "2021"
description = "Input seam (ReaderAdapter/ReaderSession) for mdat and mdat-view"
license = "MIT"
repository = "https://github.com/keejkrej/mdat"
publish = false

[lib]
name = "mdat_input"
path = "src/lib.rs"

[dependencies]
czi-rs = { git = "https://github.com/keejkrej/czi-rs" }
nd2-rs = { git = "https://github.com/keejkrej/nd2-rs" }
roxmltree = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.11"
thiserror = "1.0"
tiff = "0.11"

[features]
default = []
smb = ["nd2-rs/smb", "czi-rs/smb"]

[dev-dependencies]
tempfile = "3.14"