[package]
name = "mdat-view"
version = "0.1.0"
edition = "2021"
description = "Local viewer server for microscopy datasets"
license = "MIT"
repository = "https://github.com/keejkrej/mdat"
publish = false

[lib]
name = "mdat_view"
path = "src/lib.rs"

[[bin]]
name = "mdat-view"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
include_dir = { version = "0.7", features = ["glob"] }
mdat-input = { path = "../mdat-input" }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "time", "sync"] }
tower = "0.5"

[dev-dependencies]
reqwest = { version = "0.13", default-features = false, features = ["json"] }
tempfile = "3.14"
tiff = "0.11"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync"] }