[package]
name = "mdat"
version = "0.1.0"
edition = "2021"
description = "Rust CLI for ND2/CZI microscopy data utilities"
license = "MIT"
repository = "https://github.com/keejkrej/mdat"

[[bin]]
name = "mdat"
path = "src/main.rs"

[dependencies]
mdat-input = { path = "../mdat-input" }
clap = { version = "4.5", features = ["derive"] }
mdat-view = { path = "../mdat-view" }
serde_json = "1.0"
regex = "1.11"
tiff = "0.11"
tokio = { version = "1", features = ["rt-multi-thread"] }

[features]
default = []
smb = ["mdat-input/smb"]

[dev-dependencies]
tempfile = "3.14"
